# SQLItera

./: README.md  pyproject.toml  ruff.toml
.devtool/features/: connection-class-2026-05-14.md  operations-2026-05-14.md  scheme-classes-2026-05-14.md
.github/workflows/: run_and_test.yaml
src/sqlitera/: __init__.py  operations.py  protocols.py
src/sqlitera/schemes/: columns.py  tables.py
tests/sqlitera/: test_example.py  test_operations.py
tests/sqlitera/schemes/: test_columns.py  test_tables.py
