[project]
name = "sqlitera"
version = "0.1.0"
description = "Another SQL library"
readme = "README.md"
authors = [
    { name = "Pependr", email = "antonkudrikov88@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []


[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"


[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]


[tool.uv.build-backend]
module-root = "src"
module-name = "sqlitera"
source-include = ["tests/**", "README.md"]
